add styles in CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <header>
-  <h1>Hello World!</h1>
+  <link rel="style sheet" href="style.css" />
 </header>
+<main>
+  <h1 class="heading">Hello World!</h1>
+</main>
