--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <header>
-  <link rel="style sheet" href="style.css" />
+  <link rel="style sheet" href="/sample-project/style.css" />
 </header>
 <main>
   <h1 class="heading">Hello World!</h1>
+  <p>...goodbye</p>
 </main>
