--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
-<header>
-  <link rel="style sheet" href="/sample-project/style.css" />
-</header>
-<main>
-  <h1 class="heading">Hello World!</h1>
-  <p>...goodbye</p>
-</main>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coffee Shop</title>
+    <link
+      rel="normalize style sheet"
+      href="/sample-project/vendor/normalize.css"
+    />
+    <link rel="style sheet" href="/sample-project/pages/index.css" />
+    <link rel="shortcut icon" href="/sample-project/favicon_coffee_bean.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="page">
+      <p>heyyyyyyy</p>
+      <div class="header"></div>
+      <div class="main"></div>
+      <div class="footer"></div>
+    </div>
+  </body>
+</html>
