--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee Shop</title>
-    <link
-      rel="normalize style sheet"
-      href="/sample-project/vendor/normalize.css"
-    />
-    <link rel="style sheet" href="/sample-project/pages/index.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="/sample-project/favicon_coffee_bean.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +22,6 @@
   </head>
   <body>
     <div class="page">
-      <p>heyyyyyyy</p>
       <div class="header"></div>
       <div class="main"></div>
       <div class="footer"></div>
