--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jade Ario" />
+    <meta name="keywords" content="html, css" />
+    <meta name="description" content="tripleten coffee shop" />
     <title>Coffee Shop</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="/sample-project/favicon_coffee_bean.ico" />
