--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <div class="page">
-      <div class="header"></div>
-      <div class="main"></div>
-      <div class="footer"></div>
+      <header class="header"></header>
+      <main class="content"></main>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
