--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 
             <ul class="nav__links">
               <li>
-                <a class="nav__link" href="">Menu</a>
+                <a class="nav__link" href="#menu_link">Menu</a>
               </li>
               <li>
-                <a class="nav__link" href="">Recipes</a>
+                <a class="nav__link" href="#recipes_link">Recipes</a>
               </li>
               <li>
-                <a class="nav__link" href="">Book a Table</a>
+                <a class="nav__link" href="#reservation_link">Book a Table</a>
               </li>
 
               <li>
-                <a class="nav__link" href="">Contacts</a>
+                <a class="nav__link" href="#about_link">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -60,25 +60,26 @@
             Welcome to our study zone! We've got the coffee to energize you and
             the cozy vibes to help you get creative.
           </p>
+
+          <img
+            src="/images/inside_coffee_shop.png"
+            alt="Illustration 'Inside the coffee shop'"
+            class="header__image"
+          />
           <div class="header__footer">
-            <img
-              src="/images/inside_coffee_shop.png"
-              alt="Illustration 'Inside the coffee shop'"
-              class="header__image"
-            />
-
-            <p class="header__paragraph">Hours:</p>
-            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
-            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
-
-            <p class="header__paragraph header__paragraph-address">
+            <div>
+              <p class="header__paragraph">Hours:</p>
+              <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+              <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+            </div>
+            <p class="header__paragraph">
               200 Success Avenue, The Town of Triple Peaks
             </p>
           </div>
         </header>
       </div>
       <main class="content">
-        <section class="recipes">
+        <section id="recipes_link" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -86,45 +87,43 @@
           </p>
           <ul class="recipes__video">
             <li>
-              <iframe
-                class="recipes__iframe"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=GfK5Pmrslkf8k0el"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              >
-              </iframe>
+              <div class="recipes__iframe">
+                <iframe
+                  class="recipes__iframe-video"
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=GfK5Pmrslkf8k0el"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                >
+                </iframe>
+              </div>
               <p class="recipes__video-caption">
                 <span>Aeropress recipe</span> <span>~5 min</span>
               </p>
             </li>
             <li>
-              <iframe
-                class="recipes__iframe"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/st571DYYTR8?si=JB1k8CNSo7VbiAiJ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              ></iframe>
+              <div class="recipes__iframe">
+                <iframe
+                  class="recipes__iframe-video"
+                  src="https://www.youtube.com/embed/st571DYYTR8?si=JB1k8CNSo7VbiAiJ"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
               <p class="recipes__video-caption">
                 <span>French press recipe</span><span>~15 min</span>
               </p>
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
+        <section id="reservation_link" class="reservation"></section>
+        <section id="menu_link" class="menu"></section>
         <section class="about"></section>
       </main>
-      <footer class="footer"></footer>
+      <footer id="about_link" class="footer"></footer>
     </div>
   </body>
 </html>
