--- a/index.html
+++ b/index.html
@@ -14,70 +14,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <div class="page">
-      <div class="background-one">
-        <header class="header">
-          <nav class="nav">
-            <img
-              src="./images/logo_coffeeshop_dark.svg"
-              alt="Triple Peaks Coffee Shop Logo"
-              class="nav__logo"
-            />
-
-            <ul class="nav__links">
-              <li>
-                <a class="nav__link" href="#menu_link">Menu</a>
-              </li>
-              <li>
-                <a class="nav__link" href="#recipes_link">Recipes</a>
-              </li>
-              <li>
-                <a class="nav__link" href="#reservation_link">Book a Table</a>
-              </li>
-
-              <li>
-                <a class="nav__link" href="#about_link">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <h1 class="header__title">
-            <span class="header__span-accent">Specialty Coffee</span>
-            in the Triple Peaks Library
-          </h1>
-
-          <p class="header__description">
-            Welcome to our study zone! We've got the coffee to energize you and
-            the cozy vibes to help you get creative.
-          </p>
-
+      <header class="header">
+        <nav class="nav">
           <img
-            src="/images/inside_coffee_shop.png"
-            alt="Illustration 'Inside the coffee shop'"
-            class="header__image"
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Triple Peaks Coffee Shop Logo"
+            class="nav__logo"
           />
-          <div class="header__footer">
-            <div>
-              <p class="header__paragraph">Hours:</p>
-              <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
-              <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
-            </div>
-            <p class="header__paragraph">
-              200 Success Avenue, The Town of Triple Peaks
-            </p>
+
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#menu_link">Menu</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#recipes_link">Recipes</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#reservation_link">Book a Table</a>
+            </li>
+
+            <li>
+              <a class="nav__link" href="#about_link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty Coffee</span>
+          in the Triple Peaks Library
+        </h1>
+
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+
+        <img
+          src="/images/inside_coffee_shop.png"
+          alt="Illustration 'Inside the coffee shop'"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
-        </header>
-      </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
+      </header>
+
       <main class="content">
         <section id="recipes_link" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
@@ -85,37 +78,35 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-          <ul class="recipes__video">
+          <ul class="recipes__videos">
             <li>
-              <div class="recipes__iframe">
-                <iframe
-                  class="recipes__iframe-video"
-                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=GfK5Pmrslkf8k0el"
-                  title="YouTube video player"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                >
-                </iframe>
-              </div>
-              <p class="recipes__video-caption">
-                <span>Aeropress recipe</span> <span>~5 min</span>
-              </p>
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=GfK5Pmrslkf8k0el"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              >
+              </iframe>
+              <figcaption class="recipes__video-caption">
+                <span>Aeropress recipe</span><span>~5 min</span>
+              </figcaption>
             </li>
+
             <li>
-              <div class="recipes__iframe">
-                <iframe
-                  class="recipes__iframe-video"
-                  src="https://www.youtube.com/embed/st571DYYTR8?si=JB1k8CNSo7VbiAiJ"
-                  title="YouTube video player"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                ></iframe>
-              </div>
-              <p class="recipes__video-caption">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=JB1k8CNSo7VbiAiJ"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+
+              <figcaption class="recipes__video-caption">
                 <span>French press recipe</span><span>~15 min</span>
-              </p>
+              </figcaption>
             </li>
           </ul>
         </section>
