--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 allowfullscreen
               >
               </iframe>
-              <figcaption class="recipes__video-caption">
+              <p class="recipes__video-caption">
                 <span>Aeropress recipe</span><span>~5 min</span>
-              </figcaption>
+              </p>
             </li>
 
             <li>
@@ -104,13 +104,65 @@
                 allowfullscreen
               ></iframe>
 
-              <figcaption class="recipes__video-caption">
+              <p class="recipes__video-caption">
                 <span>French press recipe</span><span>~15 min</span>
-              </figcaption>
+              </p>
             </li>
           </ul>
         </section>
-        <section id="reservation_link" class="reservation"></section>
+        <section id="reservation_link" class="reservation">
+          <h2 class="reservation__title">Book a Table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label"
+                >Name*
+                <input
+                  required
+                  id="name-input"
+                  type="text"
+                  class="form__input"
+                  placeholder="Name Surname" /></label
+              ><label for="number-input" class="form__label"
+                >Number of guests*
+                <input
+                  required
+                  id="number-input"
+                  type="number"
+                  class="form__input"
+                  placeholder="1-8"
+                  min="1"
+                  max="8" /></label
+              ><label for="datetime-local-input" class="form__label"
+                >Date & Time*
+                <input
+                  required
+                  id="datetime-local-input"
+                  type="datetime-local"
+                  class="form__input" /></label
+              ><label for="email-input" class="form__label"
+                >Your email*
+                <input
+                  required
+                  id="email-input"
+                  type="email"
+                  class="form__input"
+                  placeholder="email@email.com"
+              /></label>
+            </fieldset>
+            <button class="form__button">Book a Table</button>
+            <label
+              for="checkbox-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input
+                required
+                type="checkbox"
+                class="form__checkbox"
+                id="checkbox-input"
+              />I agree to the terms of use</label
+            >
+          </form>
+        </section>
         <section id="menu_link" class="menu"></section>
         <section class="about"></section>
       </main>
